--- a/src/output.css
+++ b/src/output.css
@@ -1868,14 +1868,6 @@ select {
   margin-bottom: 2rem;
 }
 
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
 .ml-2 {
   margin-left: 0.5rem;
 }
@@ -2027,10 +2019,6 @@ select {
   min-height: 100vh;
 }
 
-.w-\[15rem\] {
-  width: 15rem;
-}
-
 .w-\[this-is\\\\\] {
   width: this-is\\;
 }
@@ -2053,10 +2041,6 @@ select {
 
 .min-w-\[35rem\] {
   min-width: 35rem;
-}
-
-.min-w-\[3rem\] {
-  min-width: 3rem;
 }
 
 .max-w-4xl {
@@ -2609,10 +2593,6 @@ select {
   gap: 0.75rem;
 }
 
-.gap-4 {
-  gap: 1rem;
-}
-
 .gap-6 {
   gap: 1.5rem;
 }
@@ -3076,6 +3056,10 @@ select {
   border-top-width: 2px;
 }
 
+.border-s-0 {
+  border-inline-start-width: 0px;
+}
+
 .border-solid {
   border-style: solid;
 }
@@ -3115,6 +3099,11 @@ select {
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
+.border-green-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(34 197 94 / var(--tw-border-opacity));
+}
+
 .border-red-200 {
   --tw-border-opacity: 1;
   border-color: rgb(254 202 202 / var(--tw-border-opacity));
@@ -3144,14 +3133,14 @@ select {
   border-left-color: rgb(226 232 240 / var(--tw-border-opacity));
 }
 
+.border-s-blue-400 {
+  --tw-border-opacity: 1;
+  border-inline-start-color: rgb(96 165 250 / var(--tw-border-opacity));
+}
+
 .bg-\[rgb\(255\2c 0\2c 0\)\] {
   --tw-bg-opacity: 1;
   background-color: rgb(255 0 0 / var(--tw-bg-opacity));
-}
-
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .bg-blue-500 {
@@ -3169,19 +3158,9 @@ select {
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
-.bg-gray-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
-}
-
 .bg-green-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
-}
-
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
 .bg-slate-100 {
@@ -3331,14 +3310,6 @@ select {
   padding: 0.75rem;
 }
 
-.p-4 {
-  padding: 1rem;
-}
-
-.p-6 {
-  padding: 1.5rem;
-}
-
 .px-0 {
   padding-left: 0px;
   padding-right: 0px;
@@ -3432,6 +3403,10 @@ select {
 
 .pt-3 {
   padding-top: 0.75rem;
+}
+
+.ps-3 {
+  padding-inline-start: 0.75rem;
 }
 
 .text-left {
@@ -3637,6 +3612,11 @@ select {
 .text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
+.text-green-500 {
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity));
 }
 
 .text-indigo-600 {
